<resources>
    <string name="app_name">Baking App</string>
    <string name="title_recipestep_list">RecipeSteps</string>
    <string name="title_recipestep_detail">RecipeStep Detail</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="configure">Configure</string>
    <string name="servings_format">%d servings</string>
</resources>
